--- a/paper/pnas-sample.bib
+++ b/paper/pnas-sample.bib
@@ -22,6 +22,14 @@
   note={Accessed 12/1/2022}
 }
 
+@misc{wikipediamotif,
+  author={Wikipedia},
+  howpublished={\url{https://en.wikipedia.org/wiki/Network_motif}},
+  title={Motif},
+  year={2022},
+  note={Accessed 12/8/2022}
+}
+
 @article{PMC3604768,
   title={The Ubiquity of Small-World Networks},
   author={Qawi K. Telesford and Karen E. Joyce and Satoru Hayasaka and Jonathan H. Burdette and Paul J. Laurienti},
@@ -81,4 +89,12 @@
   title={Closeness Centrality},
   year={2022},
   note={Accessed 12/1/2022}
+}
+
+@misc{networkxeffectivesize,
+  author={NetworkX},
+  howpublished={\url{https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.structuralholes.effective_size.html}},
+  title={Effective Size},
+  year={2022},
+  note={Accessed 12/8/2022}
 }
